Overflow issue fixed

--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
  justify-content: center;
  align-items: center;
  height: 100vh;
- overflow: hidden;
  flex-direction: column;
 }
 
